[package]
name = "empath"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
camino = "1.2.0"
clap = { version = "4.5.47", features = ["derive"] }
etcetera = "0.10.0"
jiff = "0.2.15"
pathdiff = { version = "0.2.3", features = ["camino"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["full"] }

[lints]
clippy.pedantic = { level = "warn", priority = -1 }
clippy.redundant_closure = "allow"
