[package]
name = "empath"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
camino = "1.2.1"
clap = { version = "4.5.53", features = ["derive"] }
etcetera = "0.11.0"
jiff = "0.2.16"
parse_datetime = "0.13.2"
pathdiff = { version = "0.2.3", features = ["camino"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }

[lints]
clippy.pedantic = { level = "warn", priority = -1 }
clippy.redundant_closure = "allow"
